# 23_C_OOP_Prj2

./: CMakeLists.txt  Test.cpp  main.cpp
T00_知识点/: 01_动态内存分配.md  01_类与对象.md  03_继承.md
T00_知识点/old/: 00_快捷键.md  00_课设.md  04_快捷键与析构函数.md  06_415_引用_const_方法重载.md  07_419_封装.md  08_425继承.md  09_友元与运算符重载.md  10_多态.md  项目.md
T01_Base/: Test1.cpp  Test2.cpp  Test3_Stack.cpp  Test4_Heap.cpp  Test5_ObjectStackAndHeap.cpp  Test6_ArrayHeap.cpp
T02_ClassAndObject/: TestBaseAccount.cpp  TestBaseAccount2.cpp  TestBaseAccount_menu.cpp  TestRectangle.cpp  TestStudent.cpp
T03_Constructor/: TestConstructor1.cpp  TestConstructor2.cpp  TestConstructor3.cpp
T04_ClassDefinition/: A.cpp  A.h  BaseAccount.h  Book.cpp  Book.h  ClassDef1.cpp  ClassDef2.cpp  Employee.h  Student.cpp  Student.h  StudentTest.cpp  Teacher.cpp  Teacher.h  步骤.md
T05_inheritance/: Test1.cpp  Test2.cpp
